--- a/parts/perforce/Makefile.am
+++ b/parts/perforce/Makefile.am
@@ -13,3 +13,6 @@ METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
 service_DATA = kdevperforce.desktop
+
+rcdir = $(kde_datadir)/kdevperforce
+rc_DATA = kdevperforcepart.rc
