added new subversion SVN support

--- a/parts/svn/Makefile.am
+++ b/parts/svn/Makefile.am
@@ -1,13 +1,18 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes) $(SVNINC)
+# Here resides the svn part
+
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevsvn.la
-libkdevsvn_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN) $(SVNLD)
-libkdevsvn_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(SVNLIBS) -lsvn_client-1
+libkdevsvn_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
+libkdevsvn_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
-libkdevsvn_la_SOURCES = svnwidget.cpp svn_part.cpp svnoptionswidget.cpp svnoptions.ui commitdlg.cpp
+libkdevsvn_la_SOURCES = svnform.ui urlfileutilities.cpp svnpart.cpp commitdlg.cpp logform.ui svnoptionswidgetbase.ui svnoptionswidget.cpp svnwidget.cpp svnentry.cpp changelog.cpp svnoptions.cpp
 
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
-service_DATA = kdevpart_svn.desktop
+service_DATA = kdevsvn.desktop
+libkdevsvn_la_DEPENDENCIES =
 
+rcdir = $(kde_datadir)/kdevsvn
+rc_DATA = kdevsvnpart.rc buildsvn.sh
