revert last change

--- a/configure.in.in
+++ b/configure.in.in
@@ -6,6 +6,7 @@ KDE_NEED_FLEX
 KDEV_CHECK_DOCBASE
 KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
+KDEV_CHECK_SVN
 KDEV_CHECK_QEDITOR
 KDEV_CHECK_COMPAT
 KDEV_CHECK_BDB
