--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -6,7 +6,14 @@ kde_module_LTLIBRARIES = libkdevcvs.la
 libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
-libkdevcvs_la_SOURCES = cvsform.ui cvspart.cpp commitdlg.cpp logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvswidget.cpp cvsentry.cpp changelog.cpp cvsoptions.cpp
+libkdevcvs_la_SOURCES = cvsform.ui \
+	cvspart.cpp \
+	commitdlg.cpp \
+	logformbase.ui logform.cpp \
+	cvsoptionswidgetbase.ui cvsoptionswidget.cpp \
+	cvswidget.cpp \
+	cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp \
+	serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp
 
 METASOURCES = AUTO
 
