Added A README file to the src directory that is suposed to act as a quickstart for the programers. Patch by:  Thomas Nagy < tnagy in 4c.ucc.ie >

--- a/parts/appwizard/kapp/Makefile.am
+++ b/parts/appwizard/kapp/Makefile.am
@@ -5,7 +5,7 @@ templatedir = ${appwizarddatadir}/templates
 
 kapp_DATA = app.cpp app.h pref.cpp pref.h appview.cpp appview.h \
             appiface.h app_client.cpp main.cpp appui.rc src-Makefile.am \
-	    kapp.png app.kdevelop subdirs
+	    kapp.png app.kdevelop subdirs README
 template_DATA = kapp
 
 DISTCLEANFILES = script.local
