QComboView - a combo box that uses QListView instead of QListBox KListViewAction - a KWidgetAction descendant for QComboViews

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -1,7 +1,7 @@
-INCLUDES = $(all_includes)
+INCLUDES = -I$(QTDIR)/include/private $(all_includes)
 
 METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libwidgets.la
 
-libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp 			ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp flagboxes.h
+libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp flagboxes.h qcomboview.cpp qcomboview.h klistviewaction.h klistviewaction.cpp
