Add newlaguage.dox.h to the distribuition

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -28,6 +28,7 @@ servicetype_DATA = kdevelopcompileroptions.desktop \
 		   kdevelopcreatefile.desktop kdevelopversioncontrol.desktop \
 		   kdevelopsourceformatter.desktop
 
+EXTRA_DIST = newlanguage.dox.h
 
 METASOURCES = AUTO
 
