--- a/parts/cvsservice/Makefile.am
+++ b/parts/cvsservice/Makefile.am
@@ -4,18 +4,19 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_include
 
 kde_module_LTLIBRARIES = libkdevcvsservice.la
 libkdevcvsservice_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevcvsservice_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la \
-            -lcvsservice
+libkdevcvsservice_la_LIBADD = $(top_builddir)/lib/libkdevelop.la \
+    $(top_builddir)/lib/interfaces/libkdevinterfaces.la \
+    -lcvsservice
 
-libkdevcvsservice_la_SOURCES = cvsform.ui \
-            cvspart.cpp \
-            logformbase.ui logform.cpp logform.skel \
-            commitdlg.cpp \
-            cvsoptionswidgetbase.ui cvsoptionswidget.cpp \
-            cvsprocesswidget.cpp cvsprocesswidget.skel \
-            cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp \
-            serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp \
-            checkoutdialogbase.ui checkoutdialog.cpp
+libkdevcvsservice_la_SOURCES = cvsformbase.ui cvsform.cpp\
+    cvspart.cpp\
+    logformbase.ui logform.cpp logform.skel\
+    commitdlg.cpp\
+    cvsoptionswidgetbase.ui cvsoptionswidget.cpp\
+    cvsprocesswidget.cpp cvsprocesswidget.skel\
+    cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp\
+    serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp\
+    checkoutdialogbase.ui checkoutdialog.cpp
 
 METASOURCES = AUTO
 
