prefer gnutar or gtar over tar if found. Fixes build on solaris and other unixes with broken tars.

--- a/configure.in.in
+++ b/configure.in.in
@@ -21,4 +21,5 @@ KDEV_PATH_KDELIBSDOC
 
 AC_PATH_PROG(DOT_FOUND, dot, no)
 AC_CHECK_PROG(gmake_prog, gmake, gmake, make)
+AC_CHECK_PROGS(TAR, gnutar gtar tar, [AM_MISSING_PROG(tar)])
 AC_DEFINE_UNQUOTED(MAKE_COMMAND, "$gmake_prog", [GNU make command])
