--- a/parts/cvsservice/kdevcvsservice.desktop
+++ b/parts/cvsservice/kdevcvsservice.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=CVS Integration using CvsService
+Comment=CVS Integration using Cervisia's cvsservice (needs KDE 3.2)
 Name=CvsService
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
