--- a/parts/cvsservice/Makefile.am
+++ b/parts/cvsservice/Makefile.am
@@ -8,15 +8,7 @@ libkdevcvsservice_la_LIBADD = $(top_builddir)/lib/libkdevelop.la \
     $(top_builddir)/lib/interfaces/libkdevinterfaces.la \
     -lcvsservice
 
-libkdevcvsservice_la_SOURCES = cvsformbase.ui cvsform.cpp\
-    cvspart.cpp\
-    logformbase.ui logform.cpp logform.skel\
-    commitdlg.cpp\
-    cvsoptionswidgetbase.ui cvsoptionswidget.cpp\
-    cvsprocesswidget.cpp cvsprocesswidget.skel\
-    cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp\
-    serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp\
-    checkoutdialogbase.ui checkoutdialog.cpp
+libkdevcvsservice_la_SOURCES = cvsformbase.ui cvsform.cpp    cvspart.cpp    logformbase.ui logform.cpp logform.skel    commitdlg.cpp    cvsoptionswidgetbase.ui cvsoptionswidget.cpp    cvsprocesswidget.cpp cvsprocesswidget.skel    cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp    serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp    checkoutdialogbase.ui checkoutdialog.cpp checkoutdialog.skel
 
 METASOURCES = AUTO
 
