delphi compiler options dialog implemented

--- a/plugins/dccoptions/Makefile.am
+++ b/plugins/dccoptions/Makefile.am
@@ -1,12 +1,12 @@
 # Here resides the gcc option dialog plugin.
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/widgets $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevdccoptions.la
-libkdevdccoptions_la_LDFLAGS = $(all_libraries) -module $(KDE_PLUGIN)
-libkdevdccoptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevdccoptions_la_LDFLAGS = -module $(all_libraries) $(KDE_PLUGIN)
+libkdevdccoptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/widgets/libwidgets.la
 
-libkdevdccoptions_la_SOURCES = dccoptionsplugin.cpp 
+libkdevdccoptions_la_SOURCES = dccoptionsplugin.cpp optiontabs.h optiontabs.cpp
 
 METASOURCES = AUTO
 
