--- a/parts/bookmarks/kdevpart_bookmarks.desktop
+++ b/parts/bookmarks/kdevpart_bookmarks.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A plugins that aims to persist source bookmarks (not quite finished)
+Comment[fr]=Un module externe pour gérer des signets dans les sources d'un programme.
 Name=KDevBookmarks
 GenericName=Persistant Source Bookmarks
+GenericName[fr]=Gestion des signets
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
