--- a/parts/clearcase/kdevclearcase.desktop
+++ b/parts/clearcase/kdevclearcase.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A plugin that provides support for Rational ClearCase, a large version control and build management system.
+Comment[fr]=Un module externe qui gére le programme « ClearCase » de Rational pour la gestion des versions de sources.
 Name=KDevClearCase
 GenericName=ClearCase Integration
+GenericName[fr]=Intégration de « ClearCase »
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevclearcase
 X-KDevelop-Scope=Project
