--- a/parts/closer/kdevpart_closer.desktop
+++ b/parts/closer/kdevpart_closer.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=
 Comment=Part for closing selected windows
+Comment[fr]=Un composant logiciel pour fermer les fenêtres sélectionnées.
 Name=KDevcloser
 GenericName=Window Closer
+GenericName[fr]=Fermeture des fenêtres
 GenericName[sv]=Fönsterstängare
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
