--- a/parts/ctags/kdevctags.desktop
+++ b/parts/ctags/kdevctags.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CTags is a source navigation tool with support for many languages. When loaded it provides a context menu for finding type declarations/definitions and also a query dialog in the Tools menu.
+Comment[fr]=Le programme « CTags » est un outils de référencement de sources pour faciliter la navigation et la recherche. Il supporte de nombreux langages de programmation. Ce module vous affiche des options dans les menus contectuels pour basculer entre les fichiers de déclarations et les fichiers de définitions. Une boîte de dialogue pour lancer des requêtes est disponible dans le menu « Outils ».
 Name=KDevCTags
 GenericName=CTags Frontend
+GenericName[fr]=Interface pour « CTags »
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevctags
 X-KDevelop-Scope=Project
