--- a/parts/debugger/kdevdebugger.desktop
+++ b/parts/debugger/kdevdebugger.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides a frontend for GDB, a source-level debugger for C, C++ and more.
+Comment[fr]=Ce module externe permet la gestion du débogueur « GDB ».
 Name=KDevDebugger
 GenericName=Debugger Frontend
+GenericName=Interface pour débogueur
 Icon=
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevdebugger
