--- a/parts/distpart/kdevpart_distpart.desktop
+++ b/parts/distpart/kdevpart_distpart.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Aids in building and publishing the final project. Only RPM package format is supported for now.
+Comment[fr]=Ce module externe est un outil d'aide à la construction et à la publication finale d'un projet.
 Name=KDevdistpart
 GenericName=Final packaging support
+GenericName[fr]=Gestion du paquetage final d'un projet
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevdistpart
