--- a/parts/debugger/kdevdebugger.desktop
+++ b/parts/debugger/kdevdebugger.desktop
@@ -6,7 +6,7 @@ Comment=This plugin provides a frontend for GDB, a source-level debugger for C, 
 Comment[fr]=Ce module externe permet la gestion du débogueur « GDB ».
 Name=KDevDebugger
 GenericName=Debugger Frontend
-GenericName=Interface pour débogueur
+GenericName[fr]=Interface pour débogueur
 Icon=
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevdebugger
