CVS_SILENT Update fr i18n

--- a/parts/abbrev/kdevabbrev.desktop
+++ b/parts/abbrev/kdevabbrev.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Abbrevation Expansion
 Comment[fr]=Extension des abréviations.
 Name=KDevAbbrev
+GenericName=Abbrevation Expansion
+GenericName[fr]=Extension des abréviations
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevabbrev
 X-KDevelop-Scope=Global
