--- a/parts/adaproject/kdevadaproject.desktop
+++ b/parts/adaproject/kdevadaproject.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Ada Project
 Comment[fr]=Gestion de projet avec le langage ADA.
 Name=KDevAdaProject
+GenericName=Ada Project
+GenericName[fr]=Gestion de projet avec le langage ADA
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevadaproject
 X-KDevelop-Language=Ada
