--- a/parts/adasupport/kdevadasupport.desktop
+++ b/parts/adasupport/kdevadasupport.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Ada Language Support
 Comment[fr]=Gestion du langage ADA.
 Name=KDevAdaSupport
+GenericName=Ada Language Support
+GenericName[fr]=Gestion du langage ADA
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevadasupport
 X-KDevelop-Language=Ada
