--- a/parts/antproject/kdevantproject.desktop
+++ b/parts/antproject/kdevantproject.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ant Project
-Comment[fr]=Gestion de projet avec Ant.
+Comment[fr]=Gestion de projet avec « Ant ».
 Name=KDevAntProject
+GenericName=Ant Project
+GenericName[fr]=Gestion de projet avec Ant
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevantproject
 X-KDevelop-Args=
