--- a/parts/appwizard/kdevappwizard.desktop
+++ b/parts/appwizard/kdevappwizard.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Application Wizard
 Comment[fr]=Assistant de création d'application.
 Name=KDevAppWizard
+GenericName=Application Wizard
+GenericName[fr]=Assistant de création d'application
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevappwizard
 X-KDevelop-Scope=Global
