--- a/parts/autoproject/kdevautoproject.desktop
+++ b/parts/autoproject/kdevautoproject.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Automake Project
-Comment[fr]=Gestion de projet avec Automake.
+Comment[fr]=Gestion de projet avec « Automake ».
 Name=KDevAutoProject
+GenericName=Automake Project
+GenericName[fr]=Gestion de projet avec Automake
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Args=
