--- a/parts/autoproject/kdevkdeautoproject.desktop
+++ b/parts/autoproject/kdevkdeautoproject.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=KDE Automake Project
-Comment[fr]=Gestion de projet avec Automake pour KDE.
+Comment[fr]=Gestion de projet avec « Automake » pour KDE.
 Name=KDevKDEAutoProject
+GenericName=KDE Automake Project
+GenericName[fr]=Gestion de projet avec Automake pour KDE
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Args=kde
