--- a/parts/bashsupport/kdevbashsupport.desktop
+++ b/parts/bashsupport/kdevbashsupport.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Bash Support
 Comment[fr]=Gestion de l'interpréteur BASH.
 Name=KDevBashSupport
+GenericName=Bash Support
+GenericName[fr]=Gestion de l'interpréteur BASH
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevbashsupport
 X-KDevelop-Language=Bash
