--- a/parts/buglist/kdevbuglist.desktop
+++ b/parts/buglist/kdevbuglist.desktop
@@ -5,6 +5,8 @@ Comment[fr]=Recherche de bogues dans une application.
 Exec=blubb
 Icon=find
 Name=KDevBugList
+GenericName=Bug Tracking Application
+GenericName[fr]=Recherche de bogues dans une application
 ServiceTypes=KDevelop/Plugin
 Type=Service
 X-KDE-Library=libkdevbuglist
