--- a/parts/classbrowser/kdevpart_classbrowser.desktop
+++ b/parts/classbrowser/kdevpart_classbrowser.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=ClassBrowser
 Comment[fr]=Afficheur de classes.
 Name=KDevClassBrowser
+GenericName=ClassBrowser
+GenericName[fr]=Afficheur de classes
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
