--- a/parts/customproject/kdevcustomproject.desktop
+++ b/parts/customproject/kdevcustomproject.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=Custom Project
 Comment[fr]=Gestion de projet personnalisé.
 Name=KDevCustomProject
+GenericName=Custom Project
+GenericName[fr]=Gestion de projet personnalisé
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevcustomproject
 X-KDevelop-Args=
