--- a/parts/cvsservice/kdevcvsservice.desktop
+++ b/parts/cvsservice/kdevcvsservice.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=CVS Integration using Cervisia's cvsservice (needs KDE 3.2)
 Comment[fr]=Intégration du service CVS via le programme « Cervisia » (nécessite KDE 3.2).
 Name=CvsService
+GenericName=CVS Integration using Cervisia's cvsservice
+GenericName[fr]=Intégration du service CVS via Cervisia
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
 X-KDevelop-Scope=Global
