--- a/parts/cppsupport/kdevcsupport.desktop
+++ b/parts/cppsupport/kdevcsupport.desktop
@@ -5,6 +5,8 @@ Exec=blubb
 Comment=C Support
 Comment[fr]=Gestion du langage C.
 Name=KDevCppSupport
+GenericName=C Support
+GenericName[fr]=Gestion du language C
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevcppsupport
 X-KDevelop-Language=C
