--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration
-Comment[fr]=Intégration de « CVS »
+Comment[fr]=Intégration de « CVS ».
 Name=CVS
+GenericName=CVS Integration
+GenericName[fr]=Intégration de CVS
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvs
 X-KDevelop-Scope=Global
