CVS_SILENT UPdate French i18n in Parts

--- a/parts/abbrev/kdevabbrev.desktop
+++ b/parts/abbrev/kdevabbrev.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Abbrevation Expansion
-Comment[fr]=Extension des abréviations.
+Comment[fr]=Un module externe pour la gestion de l'extension des abréviations.
 Name=KDevAbbrev
 GenericName=Abbrevation Expansion
 GenericName[fr]=Extension des abréviations
