--- a/parts/adasupport/kdevadasupport.desktop
+++ b/parts/adasupport/kdevadasupport.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ada Language Support
-Comment[fr]=Gestion du langage ADA.
+Comment[fr]=Un module externe pour la gestion du langage ADA.
 Name=KDevAdaSupport
 GenericName=Ada Language Support
-GenericName[fr]=Gestion du langage ADA
+GenericName[fr]=Gestion de ADA
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevadasupport
 X-KDevelop-Language=Ada
