--- a/parts/antproject/kdevantproject.desktop
+++ b/parts/antproject/kdevantproject.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ant Project
-Comment[fr]=Gestion de projet avec « Ant ».
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Ant ».
 Name=KDevAntProject
 GenericName=Ant Project
-GenericName[fr]=Gestion de projet avec Ant
+GenericName[fr]=Projet avec Ant
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevantproject
 X-KDevelop-Args=
