--- a/parts/appwizard/kdevappwizard.desktop
+++ b/parts/appwizard/kdevappwizard.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Application Wizard
-Comment[fr]=Assistant de création d'application.
+Comment[fr]=Un module externe pour la gestion de l'assistant de création d'application.
 Name=KDevAppWizard
 GenericName=Application Wizard
-GenericName[fr]=Assistant de création d'application
+GenericName[fr]=Création d'application
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevappwizard
 X-KDevelop-Scope=Global
