--- a/parts/autoproject/kdevautoproject.desktop
+++ b/parts/autoproject/kdevautoproject.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Automake Project
-Comment[fr]=Gestion de projet avec « Automake ».
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake ».
 Name=KDevAutoProject
 GenericName=Automake Project
-GenericName[fr]=Gestion de projet avec Automake
+GenericName[fr]=Projet avec Automake
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Args=
