--- a/parts/autoproject/kdevkdeautoproject.desktop
+++ b/parts/autoproject/kdevkdeautoproject.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=KDE Automake Project
-Comment[fr]=Gestion de projet avec « Automake » pour KDE.
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake » pour les applications KDE.
 Name=KDevKDEAutoProject
 GenericName=KDE Automake Project
-GenericName[fr]=Gestion de projet avec Automake pour KDE
+GenericName[fr]=Projet avec Automake pour KDE
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Args=kde
