--- a/parts/bashsupport/kdevbashsupport.desktop
+++ b/parts/bashsupport/kdevbashsupport.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Bash Support
-Comment[fr]=Gestion de l'interpréteur BASH.
+Comment[fr]=Un module externe pour la gestion de l'interpréteur BASH.
 Name=KDevBashSupport
 GenericName=Bash Support
-GenericName[fr]=Gestion de l'interpréteur BASH
+GenericName[fr]=Gestion de BASH
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevbashsupport
 X-KDevelop-Language=Bash
