--- a/parts/classbrowser/kdevpart_classbrowser.desktop
+++ b/parts/classbrowser/kdevpart_classbrowser.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=ClassBrowser
-Comment[fr]=Afficheur de classes.
+Comment[fr]=Un module externe pour la gestion de l'afficheur de classes.
 Name=KDevClassBrowser
 GenericName=ClassBrowser
 GenericName[fr]=Afficheur de classes
