--- a/parts/clearcase/kdevclearcase.desktop
+++ b/parts/clearcase/kdevclearcase.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A plugin that provides support for Rational ClearCase, a large version control and build management system.
-Comment[fr]=Un module externe qui gére le programme « ClearCase » de Rational pour la gestion des versions de sources.
+Comment[fr]=Un module externe qui gére le programme « ClearCase » de la société Rational pour la gestion des versions de sources (similaire à CVS).
 Name=KDevClearCase
 GenericName=ClearCase Integration
 GenericName[fr]=Intégration de « ClearCase »
