--- a/parts/closer/kdevpart_closer.desktop
+++ b/parts/closer/kdevpart_closer.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=
 Comment=Part for closing selected windows
-Comment[fr]=Un composant logiciel pour fermer les fenêtres sélectionnées.
+Comment[fr]=Un module externe pour fermer les fenêtres sélectionnées.
 Name=KDevcloser
 GenericName=Window Closer
 GenericName[fr]=Fermeture des fenêtres
