--- a/parts/cppsupport/kdevcppsupport.desktop
+++ b/parts/cppsupport/kdevcppsupport.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=C++ Support
-Comment[fr]=Gestion du language C++.
+Comment[fr]=Un module externe pour la gestion du language C++.
 Name=KDevCppSupport
 GenericName=C++ Support
-GenericName[fr]=Gestion du language C++
+GenericName[fr]=Gestion du C++
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevcppsupport
 X-KDevelop-Language=C++
