--- a/parts/customproject/kdevcustomproject.desktop
+++ b/parts/customproject/kdevcustomproject.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Custom Project
-Comment[fr]=Gestion de projet personnalisé.
+Comment[fr]=Un module externe pour la gestion de projet personnalisé.
 Name=KDevCustomProject
 GenericName=Custom Project
-GenericName[fr]=Gestion de projet personnalisé
+GenericName[fr]=Projet personnalisé
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevcustomproject
 X-KDevelop-Args=
