--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration
-Comment[fr]=Intégration de « CVS ».
+Comment[fr]=Un module externe pour l'intégration de « CVS ».
 Name=CVS
 GenericName=CVS Integration
 GenericName[fr]=Intégration de CVS
