--- a/parts/debugger/kdevdebugger.desktop
+++ b/parts/debugger/kdevdebugger.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides a frontend for GDB, a source-level debugger for C, C++ and more.
-Comment[fr]=Ce module externe permet la gestion du débogueur « GDB ».
+Comment[fr]=Un module externe pour la gestion du débogueur « GDB ».
 Name=KDevDebugger
 GenericName=Debugger Frontend
 GenericName[fr]=Interface pour débogueur
