--- a/parts/adaproject/kdevadaproject.desktop
+++ b/parts/adaproject/kdevadaproject.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ada Project
-Comment[fr]=Gestion de projet avec le langage ADA.
+Comment[fr]=Un module externe pour la gestion de projet avec le langage ADA.
 Name=KDevAdaProject
 GenericName=Ada Project
-GenericName[fr]=Gestion de projet avec le langage ADA
+GenericName[fr]=Projet ADA
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevadaproject
 X-KDevelop-Language=Ada
