--- a/parts/cvsservice/kdevcvsservice.desktop
+++ b/parts/cvsservice/kdevcvsservice.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration using Cervisia's cvsservice (needs KDE 3.2)
-Comment[fr]=Intégration du service CVS via le programme « Cervisia » (nécessite KDE 3.2).
+Comment[fr]=Un module externe pour l'intégration du service CVS via le programme « Cervisia » (nécessite KDE 3.2).
 Name=CvsService
 GenericName=CVS Integration using Cervisia's cvsservice
-GenericName[fr]=Intégration du service CVS via Cervisia
+GenericName[fr]=Intégration du service CVS
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
 X-KDevelop-Scope=Global
