CVS_SILENT Update French i18n in Parts

--- a/parts/doctreeview/kdevdoctreeview.desktop
+++ b/parts/doctreeview/kdevdoctreeview.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A documentation control with support for browsing and searching in multiple help documents and documentation systems.
-Comment[fr]=Ce module externe est un outils de contrôle de la documentation. Il permet la navigation et la recherche dans de multiples documents d'aides.
+Comment[fr]=Un module externe pour la gestion d'un outils de contrôle de la documentation. Il permet la navigation et la recherche dans de multiples documents d'aides.
 Name=KDevDocTreeView
 GenericName=Documentation
 GenericName[fr]=Gestion de la documentation
