--- a/parts/filecreate/kdevpart_filecreate.desktop
+++ b/parts/filecreate/kdevpart_filecreate.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=FileCreate
+Comment[fr]=Un module externe pour la création de fichier.
 Name=KDevFileCreate
+GenericName=FileCreate
+GenericName[fr]=Création de fichier
 Icon=kdevelop
 ServiceTypes=KDevelop/CreateFile
 X-KDE-Library=libkdevfilecreate
