--- a/parts/fileselector/kdevpart_fileselector.desktop
+++ b/parts/fileselector/kdevpart_fileselector.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=File Selector
+Comment[fr]=Un module externe pour la sélection de fichier.
 Name=KDevFileSelector
+GenericName=File Selector
+GenericName[fr]=Sélection de fichier
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileselector
