--- a/parts/fileview/kdevfilegroups.desktop
+++ b/parts/fileview/kdevfilegroups.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=File Groups
+Comment[fr]=Un module externe pour la gestion des groupes de fichiers.
 Name=KDevFileGroups
+GenericName=File Groups
+GenericName[fr]=Groupes de fichiers
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilegroups
 X-KDevelop-Scope=Project
