--- a/parts/fileview/kdevfileview.desktop
+++ b/parts/fileview/kdevfileview.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=File Tree
+Comment[fr]=Un module externe pour la gestion des arborescences de fichiers.
 Name=KDevFileView
+GenericName=File Tree
+GenericName[fr]=Arborescences de fichiers
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileview
 X-KDevelop-Scope=Project
