--- a/parts/fullscreen/kdevpart_fullscreen.desktop
+++ b/parts/fullscreen/kdevpart_fullscreen.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=FullScreen
+Comment[fr]=Un module externe pour la gestion du plein écran.
 Name=KDevFullScreen
+GenericName=FullScreen
+GenericName[fr]=Gestion du plein écran
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Global
