--- a/parts/grepview/kdevgrepview.desktop
+++ b/parts/grepview/kdevgrepview.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Grep Frontend
+Comment[fr]=Un module externe pour la recherche dans les fichiers d'un projet avec le programme « grep ».
 Name=KDevGrepView
+GenericName=Grep Frontend
+GenericName[fr]=Recherche dans des fichiers
 Icon=find
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevgrepview
