--- a/parts/history/kdevhistory.desktop
+++ b/parts/history/kdevhistory.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides navigation for the history of visited files, using toolbar buttons or a history list.
+Comment[fr]=Un module externe pour la navigation dans l'historique des fichiers récemments ouverts.
 Name=KDevHistory
 GenericName=History Support
+GenericName[fr]=Historique de fichiers
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevhistory
