--- a/parts/javadebugger/kdevjavadebugger.desktop
+++ b/parts/javadebugger/kdevjavadebugger.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Java Debugger Frontend
+Comment[fr]=Un module externe pour la gestion du débogueur JAVA.
 Name=KDevJavaDebugger
+GenericName=Java Debugger Frontend
+GenericName[fr]=Débogueur JAVA
 Icon=
 ServiceTypes=KDevelop/Part
 X-KDE-Library=libkdevjavadebugger
