--- a/parts/javasupport/kdevjavasupport.desktop
+++ b/parts/javasupport/kdevjavasupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Java Support
+Comment[fr]=Un module externe pour la gestion du langage JAVA.
 Name=KDevJavaSupport
+GenericName=Java Support
+GenericName[fr]=Gestion de JAVA
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevjavasupport
 X-KDevelop-Language=Java
