--- a/parts/konsole/kdevkonsoleview.desktop
+++ b/parts/konsole/kdevkonsoleview.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin gives KDevelop an embedded konsole for quick and easy command line access.
+Comment[fr]=Un module externe pour la gestion d'une Konsole embarquée pour pouvoir accéder rapidement à la ligne de commande.
 Name=KDevKonsoleView
 GenericName=Embedded Konsole
+GenericName[fr]=Konsole embarquée
 Icon=konsole
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevkonsoleview
