--- a/parts/openwith/kdevopenwith.desktop
+++ b/parts/openwith/kdevopenwith.desktop
@@ -3,9 +3,11 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides additional "open" alternatives for various context menus in KDevelop.
+Comment[fr]=Un module externe pour la gestion de l'ouverture de fichier alternative via les menus contextuels (option « Ouvrir avec... »).
 Name=KDevOpenWith
 GenericName="Open with" menu addon
-Icon=kdevelop
+GenericName[fr]=Gestion de « Ouvrir avec... »
+icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevopenwith
 X-KDevelop-Scope=Global
