--- a/parts/diff/kdevdiff.desktop
+++ b/parts/diff/kdevdiff.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Difference Viewer
-Comment[fr]=Afficheur de différences
+Comment[fr]=Un module externe pour la gestion de l'afficheur de différences.
 Name=KDevDiff
+GenericName=Difference Viewer
+GenericName[fr]=Afficheur de différences
 ServiceTypes=KDevelop/DiffFrontend
 X-KDE-Library=libkdevdiff
 
