--- a/parts/editor-chooser/kdevpart_editorchooser.desktop
+++ b/parts/editor-chooser/kdevpart_editorchooser.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Provides a dialog for Editor selection.
-Comment[fr]=Ce module externe fourni une boîte de dialogue pour la sélection d'un éditeur de texte.
+Comment[fr]=Un module externe qui fourni une boîte de dialogue pour la sélection d'un éditeur de texte.
 Name=KDevEditorChooser
 GenericName=Editor Selection
-GenericName[fr]=Sélection d'un éditeur de texte
+GenericName[fr]=Sélection d'un éditeur
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdeveditorchooser
