--- a/parts/filter/kdevfilter.desktop
+++ b/parts/filter/kdevfilter.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Shell Filtering and Insertion
+Comment[fr]=Un module externe pour la gestion du filtrage avec le shell et pour l'insertion dans les fichiers.
 Name=KDevFilter
+GenericName=Shell Filtering and Insertion
+GenericName[fr]=Filtrage et insertion
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilter
 X-KDevelop-Scope=Global
