--- a/parts/fortransupport/kdevfortransupport.desktop
+++ b/parts/fortransupport/kdevfortransupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Fortran 77 Support
+Comment[fr]=Un module externe pour la gestion du langage FORTRAN 77.
 Name=KDevFortran77Support
+GenericName=Fortran 77 Support
+GenericName[fr]=Gestion de FORTRAN 77
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevfortransupport
 X-KDevelop-Language=Fortran77
