* Added tag/branching feature to legacy CVS integration.

--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -7,14 +7,15 @@ libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
 libkdevcvs_la_SOURCES = cvsform.ui \
-            cvspart.cpp \
-            logformbase.ui logform.cpp \
-            commitdlg.cpp \
-            cvsoptionswidgetbase.ui cvsoptionswidget.cpp \
-            cvswidget.cpp \
-            cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp \
-            serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp \
-            checkoutdialogbase.ui checkoutdialog.cpp
+    cvspart.cpp \
+    logformbase.ui logform.cpp \
+    commitdlg.cpp \
+    cvsoptionswidgetbase.ui cvsoptionswidget.cpp \
+    cvswidget.cpp \
+    cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp \
+    serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp \
+    checkoutdialogbase.ui checkoutdialog.cpp \
+    tagdialogbase.ui tagdialog.h tagdialog.cpp
 
 METASOURCES = AUTO
 
